[gd_scene load_steps=48 format=1]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://game/background/background.png" type="Texture" id=2]
[ext_resource path="res://game/plane/planeYellow1.png" type="Texture" id=3]
[ext_resource path="res://game/plane/planeYellow2.png" type="Texture" id=4]
[ext_resource path="res://game/plane/planeYellow3.png" type="Texture" id=5]
[ext_resource path="res://game/plane/planeGreen1.png" type="Texture" id=6]
[ext_resource path="res://game/plane/planeGreen2.png" type="Texture" id=7]
[ext_resource path="res://game/plane/planeGreen3.png" type="Texture" id=8]
[ext_resource path="res://game/plane/planeBlue1.png" type="Texture" id=9]
[ext_resource path="res://game/plane/planeBlue2.png" type="Texture" id=10]
[ext_resource path="res://game/plane/planeBlue3.png" type="Texture" id=11]
[ext_resource path="res://game/plane/planeRed1.png" type="Texture" id=12]
[ext_resource path="res://game/plane/planeRed2.png" type="Texture" id=13]
[ext_resource path="res://game/plane/planeRed3.png" type="Texture" id=14]
[ext_resource path="res://game/plane/plane.gd" type="Script" id=15]
[ext_resource path="res://game/plane/smokeSpawner.gd" type="Script" id=16]
[ext_resource path="res://game/rock/rockSpawner.gd" type="Script" id=17]
[ext_resource path="res://game/background/cloudSpawner.gd" type="Script" id=18]
[ext_resource path="res://game/background/environmentScroller.gd" type="Script" id=19]
[ext_resource path="res://game/background/groundDirt.png" type="Texture" id=20]
[ext_resource path="res://game/background/DeliciousKeys.ogg" type="AudioStream" id=21]
[ext_resource path="res://menu/buttonSmall.png" type="Texture" id=22]
[ext_resource path="res://fonts/marshmallows-and-chocolate.fnt" type="BitmapFont" id=23]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ], "loop":true, "name":"YellowPlaneFly", "speed":30.0 }, { "frames":[ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ], "loop":true, "name":"GreenPlaneFly", "speed":30.0 }, { "frames":[ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ], "loop":true, "name":"BluePlaneFly", "speed":30.0 }, { "frames":[ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ], "loop":true, "name":"RedPlaneFly", "speed":30.0 } ]

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 35.4526, -3.57303, 41.874, 0.707855, 43.0631, 5.70221, 35.6905, 10.6966, 2.63251, 26.3932 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -19.961, -25.2153, -23.2906, -29.734, -20.4367, -36.3932, 26.653, -35.9175, -14.7289, -23.5505 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -14.2532, -19.7453, -14.7289, -23.5505, 26.653, -35.9175, 29.7448, -30.9231, 27.8422, -24.5018, 20.9452, -22.3614 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -10.9236, 23.3014, -20.6745, 11.8857, -14.2532, -19.7453, 20.9452, -22.3614, 19.9939, -19.0318, 2.63251, 26.3932 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( -15.918, 27.5823, -23.7663, 26.1553, -25.9067, 19.2583, -20.6745, 11.8857, -10.9236, 23.3014 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 19.9939, -19.0318, 29.7448, -17.6048, 33.0744, -8.80524, 2.63251, 26.3932 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( -39.7007, -6.18913, -42.3168, -9.99437, -44.4572, -19.5074, -39.7007, -25.6909, -27.0958, -24.9775, -20.6745, -19.9831, -34.9441, -5.23782 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( -20.6745, 11.8857, -34.9441, -5.23782, -20.6745, -19.9831, -14.2532, -19.7453 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 2.63251, 26.3932, 33.0744, -8.80524, 35.4526, -3.57303 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( 2.63251, 26.3932, 35.6905, 10.6966, 32.8365, 14.7396 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( 2.63251, 26.3932, 32.8365, 14.7396, 29.7448, 24.4905, 24.0369, 27.3445, 5.48644, 31.1497 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( 12.3834, 36.1441, 5.48644, 31.1497, 24.0369, 27.3445, 20.4695, 34.2414 )

[sub_resource type="RectangleShape2D" id=14]

custom_solver_bias = 0.0
extents = Vector2( 10, 32.0257 )

[sub_resource type="ConvexPolygonShape2D" id=15]

custom_solver_bias = 0.0
points = Vector2Array( -405.3, 37.4189, -407.755, -0.641113, -373.378, -1.8689, -357.418, 7.95306 )

[sub_resource type="ConvexPolygonShape2D" id=16]

custom_solver_bias = 0.0
points = Vector2Array( 230.671, -12.9186, 360.812, -12.9186, 400.099, -3.09662, 405.01, 33.7357, 166.828, 20.2305, 195.066, -8.00757 )

[sub_resource type="ConvexPolygonShape2D" id=17]

custom_solver_bias = 0.0
points = Vector2Array( 252.77, -32.5624, 341.168, -35.0179, 360.812, -12.9186, 230.671, -12.9186 )

[sub_resource type="ConvexPolygonShape2D" id=18]

custom_solver_bias = 0.0
points = Vector2Array( -30.8383, -23.9683, 31.7766, -27.6515, 67.3812, 6.72534, -51.7099, -10.4631 )

[sub_resource type="ConvexPolygonShape2D" id=19]

custom_solver_bias = 0.0
points = Vector2Array( -270.248, -1.8689, -248.149, -27.6515, -158.523, -33.7902, -93.4531, -8.00757 )

[sub_resource type="ConvexPolygonShape2D" id=20]

custom_solver_bias = 0.0
points = Vector2Array( 166.828, 20.2305, 405.01, 33.7357, -405.3, 37.4189, 129.996, 19.0027 )

[sub_resource type="ConvexPolygonShape2D" id=21]

custom_solver_bias = 0.0
points = Vector2Array( 107.897, 6.72534, 129.996, 19.0027, -405.3, 37.4189, 67.3812, 6.72534 )

[sub_resource type="ConvexPolygonShape2D" id=22]

custom_solver_bias = 0.0
points = Vector2Array( -51.7099, -10.4631, 67.3812, 6.72534, -405.3, 37.4189, -93.4531, -8.00757 )

[sub_resource type="ConvexPolygonShape2D" id=23]

custom_solver_bias = 0.0
points = Vector2Array( -270.248, -1.8689, -93.4531, -8.00757, -405.3, 37.4189, -315.675, 10.4086 )

[sub_resource type="ConvexPolygonShape2D" id=24]

custom_solver_bias = 0.0
points = Vector2Array( -405.3, 37.4189, -357.418, 7.95306, -315.675, 10.4086 )

[node name="RootNode" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 768.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = { "_edit_lock_":true }

[node name="Plane" type="AnimatedSprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 200, 355 )
z/z = 2
frames = SubResource( 1 )
animation = "BluePlaneFly"
playing = true
script/script = ExtResource( 15 )
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="Area2D" type="Area2D" parent="Plane"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 4 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 5 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 6 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 7 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 8 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 9 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 10 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 11 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/9/trigger = false
shapes/10/shape = SubResource( 12 )
shapes/10/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/10/trigger = false
shapes/11/shape = SubResource( 13 )
shapes/11/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/11/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Plane/Area2D"]

build_mode = 0
polygon = Vector2Array( -20.4367, -36.3932, 26.653, -35.9175, 29.7448, -30.9231, 27.8422, -24.5018, 20.9452, -22.3614, 19.9939, -19.0318, 29.7448, -17.6048, 33.0744, -8.80524, 35.4526, -3.57303, 41.874, 0.707855, 43.0631, 5.70221, 35.6905, 10.6966, 32.8365, 14.7396, 29.7448, 24.4905, 24.0369, 27.3445, 20.4695, 34.2414, 12.3834, 36.1441, 5.48644, 31.1497, 2.63251, 26.3932, -10.9236, 23.3014, -15.918, 27.5823, -23.7663, 26.1553, -25.9067, 19.2583, -20.6745, 11.8857, -34.9441, -5.23782, -39.7007, -6.18913, -42.3168, -9.99437, -44.4572, -19.5074, -39.7007, -25.6909, -27.0958, -24.9775, -20.6745, -19.9831, -14.2532, -19.7453, -14.7289, -23.5505, -19.961, -25.2153, -23.2906, -29.734 )
shape_range = Vector2( 0, 11 )
trigger = false

[node name="Exhaust" type="Node2D" parent="Plane"]

transform/pos = Vector2( -35, 10 )
script/script = ExtResource( 16 )

[node name="RockSpawner" type="Node2D" parent="."]

script/script = ExtResource( 17 )

[node name="CloudSpawner" type="Node2D" parent="."]

script/script = ExtResource( 18 )

[node name="ScoreArea" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 200, 380 )
input/pickable = true
shapes/0/shape = SubResource( 14 )
shapes/0/transform = Matrix32( 1, 0, 0, 10, 0, -2.78952 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]

transform/pos = Vector2( 0, -2.78952 )
transform/scale = Vector2( 1, 10 )
shape = SubResource( 14 )
trigger = false
_update_shape_index = 0

[node name="EnvironmentScroller" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 19 )

[node name="GroundScroller" type="Node2D" parent="EnvironmentScroller"]

editor/display_folded = true
transform/pos = Vector2( 0, 733 )

[node name="Ground1" type="Node2D" parent="EnvironmentScroller/GroundScroller"]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="EnvironmentScroller/GroundScroller/Ground1"]

z/z = 1
texture = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="EnvironmentScroller/GroundScroller/Ground1"]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 16 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 17 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 18 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 19 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 20 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 21 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 22 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 23 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 24 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/9/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnvironmentScroller/GroundScroller/Ground1/Area2D"]

build_mode = 0
polygon = Vector2Array( -407.755, -0.641113, -373.378, -1.8689, -357.418, 7.95306, -315.675, 10.4086, -270.248, -1.8689, -248.149, -27.6515, -158.523, -33.7902, -93.4531, -8.00757, -51.7099, -10.4631, -30.8383, -23.9683, 31.7766, -27.6515, 67.3812, 6.72534, 107.897, 6.72534, 129.996, 19.0027, 166.828, 20.2305, 195.066, -8.00757, 230.671, -12.9186, 252.77, -32.5624, 341.168, -35.0179, 360.812, -12.9186, 400.099, -3.09662, 405.01, 33.7357, -405.3, 37.4189 )
shape_range = Vector2( 0, 9 )
trigger = false

[node name="Ground2" type="Node2D" parent="EnvironmentScroller/GroundScroller"]

editor/display_folded = true
transform/pos = Vector2( 806, 0 )

[node name="Sprite" type="Sprite" parent="EnvironmentScroller/GroundScroller/Ground2"]

z/z = 1
texture = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="EnvironmentScroller/GroundScroller/Ground2"]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 16 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 17 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 18 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 19 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 20 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 21 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 22 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 23 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 24 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/9/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnvironmentScroller/GroundScroller/Ground2/Area2D"]

build_mode = 0
polygon = Vector2Array( -407.755, -0.641113, -373.378, -1.8689, -357.418, 7.95306, -315.675, 10.4086, -270.248, -1.8689, -248.149, -27.6515, -158.523, -33.7902, -93.4531, -8.00757, -51.7099, -10.4631, -30.8383, -23.9683, 31.7766, -27.6515, 67.3812, 6.72534, 107.897, 6.72534, 129.996, 19.0027, 166.828, 20.2305, 195.066, -8.00757, 230.671, -12.9186, 252.77, -32.5624, 341.168, -35.0179, 360.812, -12.9186, 400.099, -3.09662, 405.01, 33.7357, -405.3, 37.4189 )
shape_range = Vector2( 0, 9 )
trigger = false

[node name="Ground3" type="Node2D" parent="EnvironmentScroller/GroundScroller"]

editor/display_folded = true
transform/pos = Vector2( 1614, 0 )

[node name="Sprite" type="Sprite" parent="EnvironmentScroller/GroundScroller/Ground3"]

z/z = 1
texture = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="EnvironmentScroller/GroundScroller/Ground3"]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 16 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 17 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 18 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 19 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 20 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 21 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 22 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 23 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 24 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/9/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnvironmentScroller/GroundScroller/Ground3/Area2D"]

build_mode = 0
polygon = Vector2Array( -407.755, -0.641113, -373.378, -1.8689, -357.418, 7.95306, -315.675, 10.4086, -270.248, -1.8689, -248.149, -27.6515, -158.523, -33.7902, -93.4531, -8.00757, -51.7099, -10.4631, -30.8383, -23.9683, 31.7766, -27.6515, 67.3812, 6.72534, 107.897, 6.72534, 129.996, 19.0027, 166.828, 20.2305, 195.066, -8.00757, 230.671, -12.9186, 252.77, -32.5624, 341.168, -35.0179, 360.812, -12.9186, 400.099, -3.09662, 405.01, 33.7357, -405.3, 37.4189 )
shape_range = Vector2( 0, 9 )
trigger = false

[node name="RoofScroller" type="Node2D" parent="EnvironmentScroller"]

editor/display_folded = true
transform/pos = Vector2( 0, 35 )

[node name="Roof1" type="Node2D" parent="EnvironmentScroller/RoofScroller"]

editor/display_folded = true
transform/rot = 180.0

[node name="Sprite" type="Sprite" parent="EnvironmentScroller/RoofScroller/Roof1"]

z/z = 1
texture = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="EnvironmentScroller/RoofScroller/Roof1"]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 16 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 17 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 18 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 19 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 20 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 21 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 22 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 23 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 24 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/9/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnvironmentScroller/RoofScroller/Roof1/Area2D"]

build_mode = 0
polygon = Vector2Array( -407.755, -0.641113, -373.378, -1.8689, -357.418, 7.95306, -315.675, 10.4086, -270.248, -1.8689, -248.149, -27.6515, -158.523, -33.7902, -93.4531, -8.00757, -51.7099, -10.4631, -30.8383, -23.9683, 31.7766, -27.6515, 67.3812, 6.72534, 107.897, 6.72534, 129.996, 19.0027, 166.828, 20.2305, 195.066, -8.00757, 230.671, -12.9186, 252.77, -32.5624, 341.168, -35.0179, 360.812, -12.9186, 400.099, -3.09662, 405.01, 33.7357, -405.3, 37.4189 )
shape_range = Vector2( 0, 9 )
trigger = false

[node name="Roof2" type="Node2D" parent="EnvironmentScroller/RoofScroller"]

editor/display_folded = true
transform/pos = Vector2( 806, 0 )
transform/rot = 180.0

[node name="Sprite" type="Sprite" parent="EnvironmentScroller/RoofScroller/Roof2"]

z/z = 1
texture = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="EnvironmentScroller/RoofScroller/Roof2"]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 16 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 17 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 18 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 19 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 20 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 21 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 22 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 23 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 24 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/9/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnvironmentScroller/RoofScroller/Roof2/Area2D"]

build_mode = 0
polygon = Vector2Array( -407.755, -0.641113, -373.378, -1.8689, -357.418, 7.95306, -315.675, 10.4086, -270.248, -1.8689, -248.149, -27.6515, -158.523, -33.7902, -93.4531, -8.00757, -51.7099, -10.4631, -30.8383, -23.9683, 31.7766, -27.6515, 67.3812, 6.72534, 107.897, 6.72534, 129.996, 19.0027, 166.828, 20.2305, 195.066, -8.00757, 230.671, -12.9186, 252.77, -32.5624, 341.168, -35.0179, 360.812, -12.9186, 400.099, -3.09662, 405.01, 33.7357, -405.3, 37.4189 )
shape_range = Vector2( 0, 9 )
trigger = false

[node name="Roof3" type="Node2D" parent="EnvironmentScroller/RoofScroller"]

editor/display_folded = true
transform/pos = Vector2( 1614, 0 )
transform/rot = 180.0

[node name="Sprite" type="Sprite" parent="EnvironmentScroller/RoofScroller/Roof3"]

z/z = 1
texture = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="EnvironmentScroller/RoofScroller/Roof3"]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 16 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 17 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 18 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 19 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 20 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 21 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 22 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 23 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 24 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/9/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnvironmentScroller/RoofScroller/Roof3/Area2D"]

build_mode = 0
polygon = Vector2Array( -407.755, -0.641113, -373.378, -1.8689, -357.418, 7.95306, -315.675, 10.4086, -270.248, -1.8689, -248.149, -27.6515, -158.523, -33.7902, -93.4531, -8.00757, -51.7099, -10.4631, -30.8383, -23.9683, 31.7766, -27.6515, 67.3812, 6.72534, 107.897, 6.72534, 129.996, 19.0027, 166.828, 20.2305, 195.066, -8.00757, 230.671, -12.9186, 252.77, -32.5624, 341.168, -35.0179, 360.812, -12.9186, 400.099, -3.09662, 405.01, 33.7357, -405.3, 37.4189 )
shape_range = Vector2( 0, 9 )
trigger = false

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 21 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="UINode" type="Node2D" parent="."]

z/z = 2

[node name="PauseButton" type="TextureButton" parent="UINode"]

editor/display_folded = true
rect/scale = Vector2( 1.25, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 610.0
margin/right = 156.0
margin/bottom = 690.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )

[node name="PauseLabel" type="Label" parent="UINode/PauseButton"]

rect/scale = Vector2( 0.75, 1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 23 )
text = "Pause"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="ResumeButton" type="TextureButton" parent="UINode"]

editor/display_folded = true
rect/scale = Vector2( 1.5, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 460.0
margin/top = 330.0
margin/right = 596.0
margin/bottom = 410.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )

[node name="ResumeLabel" type="Label" parent="UINode/ResumeButton"]

rect/scale = Vector2( 0.6, 1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 173.0
margin/bottom = 67.0
custom_fonts/font = ExtResource( 23 )
text = "Resume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="ScoreLabel" type="Label" parent="UINode"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 80.0
margin/right = 273.0
margin/bottom = 155.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.622437, 0.375565, 0.636719, 1 )
text = "Score : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="area_enter" from="Plane/Area2D" to="Plane" method="_on_Area2D_area_enter"]

[connection signal="area_enter" from="ScoreArea" to="Plane" method="_on_ScoreArea_area_enter"]

[connection signal="pressed" from="UINode/PauseButton" to="." method="_on_PauseButton_pressed"]

[connection signal="pressed" from="UINode/ResumeButton" to="." method="_on_ResumeButton_pressed"]


